--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
     "version": 2,
       "framework": null,
     "functions": {
-        "api/users/**/*.js": {"maxDuration": 30},
-        "api/index.php": { "runtime": "vercel-php@0.5.0" }
+
+        "Api/index.php": { "runtime": "vercel-php@0.5.0" }
     },
     "routes": [{
         "src": "/(.*)",
-        "dest": "/api/index.php"
+        "dest": "/Api/index.php"
     }],
     "env": {
         "APP_ENV": "production",
