--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
     "version": 2,
       "framework": null,
     "functions": {
-
-        "Api/index.php": { "runtime": "vercel-php@0.5.0" }
+        "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
     "routes": [{
         "src": "/(.*)",
